--- a/app/src/main/res/menu/menu_navigation.xml
+++ b/app/src/main/res/menu/menu_navigation.xml
@@ -3,14 +3,18 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/menu_item_profile"
-        android:icon="@drawable/ic_baseline_profile_24"
-        android:title="Profile"
-
-
-        />
+        android:id="@+id/menu_item_favorites"
+        android:icon="@drawable/ic_baseline_favorite_24"
+        android:title="Favorites" />
     <item
         android:id="@+id/menu_item_restaurant"
         android:icon="@drawable/ic_baseline_restaurant_24"
         android:title="Restaurant" />
+    <item
+        android:id="@+id/menu_item_profile"
+        android:icon="@drawable/ic_baseline_profile_24"
+        android:title="Profile"
+        />
+
+
 </menu>
