--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,19 +1,130 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ProfileFragment">
+    tools:context=".fragments.ProfileFragment">
 
 
-    <TextView
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Profile"
-        android:textSize="32dp"
-        android:textColor="@color/purple_200"/>
+        android:layout_height="match_parent">
 
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Profile"
+            android:textColor="@color/purple_200"
+            android:textSize="32dp"
+            tools:ignore="MissingConstraints" />
 
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Name:"
+            app:layout_constraintTop_toBottomOf="@+id/textView3"
+
+            tools:layout_editor_absoluteX="16dp"
+            tools:layout_marginTop="16dp"
+            tools:ignore="MissingConstraints" />
+
+        <TextView
+            android:id="@+id/nameTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Nev"
+            app:layout_constraintTop_toBottomOf="@+id/textView2"
+            tools:layout_editor_absoluteX="16dp"
+            android:textSize="24dp"
+            tools:layout_marginTop="16dp"
+            tools:ignore="MissingConstraints" />
+        <TextView
+            android:id="@+id/textView4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Adress:"
+            app:layout_constraintTop_toBottomOf="@+id/nameTextView"
+
+            tools:layout_editor_absoluteX="16dp"
+            tools:layout_marginTop="16dp"
+            tools:ignore="MissingConstraints" />
+
+        <TextView
+            android:id="@+id/adressTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Cim"
+            app:layout_constraintTop_toBottomOf="@+id/textView4"
+            tools:layout_editor_absoluteX="16dp"
+            android:textSize="24dp"
+            tools:layout_marginTop="16dp"
+            tools:ignore="MissingConstraints" />
+        <TextView
+            android:id="@+id/textView5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Phone number:"
+            app:layout_constraintTop_toBottomOf="@+id/adressTextView"
+
+            tools:layout_editor_absoluteX="16dp"
+            tools:layout_marginTop="16dp"
+            tools:ignore="MissingConstraints" />
+
+        <TextView
+            android:id="@+id/phoneTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Phone"
+            app:layout_constraintTop_toBottomOf="@+id/textView5"
+            tools:layout_editor_absoluteX="16dp"
+            android:textSize="24dp"
+            tools:layout_marginTop="16dp"
+            tools:ignore="MissingConstraints" />
+        <TextView
+            android:id="@+id/textView6"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Email:"
+            app:layout_constraintTop_toBottomOf="@+id/phoneTextView"
+
+            tools:layout_editor_absoluteX="16dp"
+            tools:layout_marginTop="16dp"
+            tools:ignore="MissingConstraints" />
+
+        <TextView
+            android:id="@+id/emailTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Email"
+            app:layout_constraintTop_toBottomOf="@+id/textView6"
+            tools:layout_editor_absoluteX="16dp"
+            android:textSize="24dp"
+            tools:layout_marginTop="16dp"
+            tools:ignore="MissingConstraints" />
+        <TextView
+            android:id="@+id/favouritesText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Favourites:"
+            app:layout_constraintTop_toBottomOf="@+id/emailTextView"
+            tools:layout_editor_absoluteX="16dp"
+            android:textSize="24dp"
+            tools:layout_marginTop="16dp"
+            tools:ignore="MissingConstraints" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/favouritesRecyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@+id/favouritesText"
+            tools:layout_editor_absoluteX="16dp"
+            tools:layout_marginTop="16dp"
+            />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 
 </FrameLayout>
