--- a/app/src/main/res/menu/menu_navigation.xml
+++ b/app/src/main/res/menu/menu_navigation.xml
@@ -3,9 +3,9 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/menu_item_favorites"
-        android:icon="@drawable/ic_baseline_favorite_24"
-        android:title="Favorites" />
+        android:id="@+id/menu_item_favourites"
+        android:icon="@drawable/ic_baseline_favourite_24"
+        android:title="Favourites" />
     <item
         android:id="@+id/menu_item_restaurant"
         android:icon="@drawable/ic_baseline_restaurant_24"
