--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -109,6 +109,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Favourites:"
+            android:textColor="@color/purple_200"
             app:layout_constraintTop_toBottomOf="@+id/emailTextView"
             tools:layout_editor_absoluteX="16dp"
             android:textSize="24dp"
@@ -121,8 +122,7 @@
             android:layout_height="wrap_content"
             app:layout_constraintTop_toBottomOf="@+id/favouritesText"
             tools:layout_editor_absoluteX="16dp"
-            tools:layout_marginTop="16dp"
-            />
+            tools:layout_marginTop="16dp" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
